# website

./: .gitignore  AI_GENERATION_FIXES.md  AI_PROVIDER_STATUS.md  ARCHITECTURE_COMPLETE.md  CODESPACES_FIX.md  CODESPACES_SETUP.md  DEV_GUIDE.md  FIXES_COMPLETE.md  GAP_ANALYSIS.md  INTELLIGENT_SYSTEM_PLAN.md  LOVABLE_GAP_ANALYSIS.md  PHASE_1_COMPLETE.md  PHASE_1_COMPLETED.md  PHASE_1_IMPLEMENTATION.md  PHASE_2_COMPLETE.md  PHASE_2_SUMMARY.md  PHASE_3A_COMPLETE.md  PHASE_3B_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART_PHASE1.md  README.md  README_NEW.md  TESTING_REPORT.md  appCheck.js  check-status.sh  config.js  index.html  package-lock.json  package.json  run_generation.py  script.js  style.css  test_functional.html
backend/: .env.example  pyproject.toml  requirements.txt  test_ai_response.py  test_openrouter_models.py  worker.py
backend/alembic/: env.py
backend/app/: ai_engine.py  database.py  db.py  main.py  models.py  schemas.py
backend/app/ai/: __init__.py  agents.py  engine.py  key_rotator.py  prompts.py  router.py
backend/app/core/: config.py  logging.py  rate_limit.py  security.py  sockets.py
backend/app/routers/: __init__.py  ai.py  auth.py  preview.py  projects.py  websockets.py
backend/app/services/: ast_patcher.py  generator.py  (+8 more)
backend/tests/: test_agents_loop.py  test_ai_providers.py  test_async_integration.py  test_edit_agent.py  test_health.py  test_persistence.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase3b.py  test_phase4.py  test_quality_agent.py  test_vision.py
(+50 files in other folders)
